--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 3000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
-POSTGRES_DB=nest
-POSTGRES_PASSWORD=joker
+POSTGRES_DB=myproj3
+POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
 SECRET_KEY=secret
